// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Starter Block when given custom data should render the block using the custom data 1`] = `
<block
  color={
    Object {
      "background": "yellow",
    }
  }
  text="Hello from props"
>
  <Component />
</block>
`;

exports[`The Starter Block when mounted with default data should match the snapshot 1`] = `
.div {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' !important;
  font-size: 16px !important;
  color: #333 !important;
  background-color: transparent !important;
}

<bound createElementWithValidation>
  <block
    color={
      Object {
        "background": "transparent",
      }
    }
    text="Default prop"
  >
    <div
      className="div"
    >
      Default prop
    </div>
  </block>
</bound createElementWithValidation>
`;

exports[`The Starter Block when there is no custom data should render the block with the default content 1`] = `
<block
  color={
    Object {
      "background": "transparent",
    }
  }
  text="Default prop"
>
  <Component />
</block>
`;
